--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-native": "0.72.5",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "^2.13.2",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-pager-view": "^6.2.2",
@@ -36,6 +37,7 @@
     "react-native-radio-buttons": "^1.0.0",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.5.4",
+    "react-native-responsive-dimensions": "^3.1.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
